align with original theme, remove unnecessary files, increase large content max-width, fix toc translation, add details feature, add nicer title

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -33,6 +33,24 @@ body {
   color: $body-text-color;
 }
 
+#skip-to-content {
+  height: 1px;
+  width: 1px;
+  position: absolute;
+  overflow: hidden;
+  top: -10px;
+
+  &:focus {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    height: auto;
+    width: auto;
+    background: invert($body-link-color);
+    outline: thick solid invert($body-link-color);
+  }
+}
+
 a {
   color: $body-link-color;
   text-decoration: none;
@@ -41,9 +59,7 @@ a {
     text-decoration: underline;
   }
 }
-.page-header a {
-  color: $header-heading-color;
-}
+
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
@@ -95,15 +111,15 @@ a {
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 
   @include large {
-    padding: 2rem 2rem;
+    padding: 5rem 6rem;
   }
 
   @include medium {
-    padding: 1rem 1rem;
+    padding: 3rem 4rem;
   }
 
   @include small {
-    padding: 0.5rem 0.5rem;
+    padding: 2rem 1rem;
   }
 }
 
@@ -150,7 +166,7 @@ a {
   }
 
   @include large {
-    max-width: 70rem;
+    max-width: 64rem;
     padding: 2rem 6rem;
     margin: 0 auto;
     font-size: 1.1rem;
@@ -164,6 +180,20 @@ a {
   @include small {
     padding: 2rem 1rem;
     font-size: 1rem;
+  }
+
+  kbd {
+    background-color: #fafbfc;
+    border: 1px solid #c6cbd1;
+    border-bottom-color: #959da5;
+    border-radius: 3px;
+    box-shadow: inset 0 -1px 0 #959da5;
+    color: #444d56;
+    display: inline-block;
+    font-size: 11px;
+    line-height: 10px;
+    padding: 3px 5px;
+    vertical-align: middle;
   }
 
   img {
